styles/account.css
/* Reset some default styles */
body, h1, h2, p, ul, li {
    margin: 0;
    padding: 0;
    line-height: 150%;
}

/* Page styling */
body {
    font-family: Arial, sans-serif;
    background-color: #f0f0f0;
    display: flex; /* Use flex to create a column layout */
}

.vertical-nav {
    background-color: #333;
    color: white;
    width: 200px; /* Width of the vertical navigation bar */
    min-height: 100vh; /* Full height of the viewport */
}

.vertical-nav ul {
    list-style: none;
    padding: 10px 0;
    text-align: center;
}

.vertical-nav li {
    margin-bottom: 10px;
}

.vertical-nav a {
    text-decoration: none;
    color: white;
    font-weight: bold;
    display: block; /* Make each link a block element */
    padding: 10px;
    transition: background-color 0.3s ease-in-out;
}

.vertical-nav a:hover {
    background-color: #1F78B4; /* Hover background color */
}

header {
    background-color: #1F78B4;
    color: white;
    text-align: center;
    padding: 20px 0;
    flex: 1; /* Expand to fill available space */
}

main {
    flex: 3; /* Expand to fill available space */
    padding: 20px;
}

section {
    background-color: white;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
}

button {    
    padding: 10px;
    border: 0;
    border-radius: 5px;
    background-color: #fff;
    width: 75px;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
}

footer {
    background-color: #1F78B4;
    color: white;
    text-align: center;
    padding: 10px 0;
    flex: 1; /* Expand to fill available space */
}

#search_artist {
    padding: 20px;
}

#search_artist .wrapper {
    margin: 0 auto;
}

#search_artist .wrapper h1 {
    font-weight: 300;
    font-size: 40px;
    text-align: center;
    padding: 30px 0px;
    color: black;
}

input {
    width: 90%;
    margin-left: auto;
    margin-right: auto;
    border-radius: 50px;
    -webkit-appearance: none;
    border: 1px solid #d6d6d6;
    padding: 10px 30px;
    font-size: 21px;
    font-weight: 300;
}

input:focus {
    outline: none;
}

::-webkit-input-placeholder {
    color: #b8b8b8;
    text-align: center;
}

#search_artist .wrapper #btn_search {
    width: 150px;
    color: black;
    font-size: 20px;
    margin: 0 auto;
    padding: 10px 0;
    text-align: center;
    cursor: pointer;
}

/* ALBUMS */
#album_list_container {
    margin-top: 50px;
}

#album_list_container .album_item {
    padding: 20px 0;
    border: 3px solid #dedede;
    width: 100%;
    height: 105px;
    display: inline-block;
}

#album_list_container .album_item .item_thmb {
    width: 100px;
    height: 100px;
    position: left;
    margin-left: 50px;
    background-size: cover !important;
    background-repeat: no-repeat;
}

#album_list_container .album_item .song_info {
    font-size: 20px;
}

#album_list_container .album_item a {
    background: black;
    color: #fff;
    padding: 5px 10px;
    font-size: 12px;
    border-radius: 50px;
    margin-top: 20px;
    cursor: pointer;
}

#not_match {
    display: none;
    text-align: center;
    color: red;
    font-weight: bold;
    font-size: 18px;
    margin: 5px 0 0 0;
}

#album_item {
    border-radius: 5px;
    border-style: solid;
    border-color: black;
  
    height: 120px;
    width: 60%;
  
    padding: 10px;
    margin: 10px;
}

#mini_album_item {
    border-radius: 5px;
    border-style: solid;
    border-color: black;
  
    height: 70px;
    width: 95%;
  
    padding: 10px;
    margin: 10px;
}

#album_art {
    display: inline-block;
}

#song_info {
    display: inline-block;
    margin-left: 20px;
    position: absolute;
}

#buy {
    margin-right: 20px;
    float: right;
}

/* start of modal styling */

#cartBtn {
    height: 30px;
    width: 70px;

    float: right;
}

#cartBtn:hover, #closeBtn:hover, #buy:hover {
    background-color:rgb(163, 163, 163);
}



.modal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) scale(0);
    transition: 200ms ease-in-out;
    border: 1px solid black;
    border-radius: 10px;
    z-index: 10;
    background-color: white;
    width: 700px;
    max-width: 80%;
}

.modal.active {
    transform: translate(-50%, -50%) scale(1);
}

.modal-header {
    padding: 10px 15px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid black;
}

.modal-header .title {
    font-size: 1.25rem;
    font-weight: bold;
}

.modal-header .close-button {
    cursor: pointer;
    border: none;
    outline: none;
    background: none;
    font-size: 1.25rem;
    font-weight: bold;
}

.modal-body {
    padding: 10px 15px;
}

#overlay {
    position: fixed;
    opacity: 0;
    transition: 200ms ease-in-out;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, .5);
    pointer-events: none;
}

#overlay.active {
    opacity: 1;
    pointer-events: all;
}

